correct select alignment issues and include correct github repo link

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 .form-buffer {
-  margin: 10px 10px;
   width: 33%;
+  margin: 10px auto;
 }
 
 #config.hide-me {
